Force textarea value.

--- a/docshare-tutorial.html
+++ b/docshare-tutorial.html
@@ -36,6 +36,7 @@
 </template>
 
 <template name="documentView">
+  <div id="container">
   {{#if selectedDocument}}
   {{#with selectedDocument}}
     <div class="display">
@@ -44,4 +45,5 @@
     </div>
   {{/with}}
   {{/if}}
+  </div>
 </template>
